--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -30,6 +30,7 @@
       @include respond(phone) {
         margin-bottom: 2.5rem !important;
       }
+
       @include respond(tab-land) {
         margin-bottom: 4.8rem;
       }
@@ -44,14 +45,15 @@
         }
       }
 
-      & p > a {
+      & p>a {
         color: $secondary-color;
       }
     }
 
     &__image {
-      width: 90%;
+      width: 60%;
       margin: 0 auto;
+
 
       @include respond(tab-land) {
         width: 100%;
@@ -75,4 +77,12 @@
       }
     }
   }
+
+  img {
+    border-radius: 50px;
+  }
+
+  // .img-fluid {
+  //   border-radius: 90px;
+  // }
 }
